<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/connectProgressBar1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/entdrosslerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/send_signal" />

    <EditText
        android:id="@+id/deviceName_TextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entdrosslerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:ems="10" />

    <TextView
        android:id="@+id/deviceName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/deviceName_TextField"
        android:layout_alignLeft="@+id/deviceName_TextField"
        android:layout_marginBottom="34dp"
        android:text="@string/device_name" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/save" />

    <TextView
        android:id="@+id/deviceOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deviceOutput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp" />

</RelativeLayout>