<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/device_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="21dp" />

    <Button
        android:id="@+id/signal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_label"
        android:layout_centerHorizontal="true"
        android:text="@string/send_signal" />

    <Button
        android:id="@+id/save_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signal_button"
        android:layout_below="@+id/device_name"
        android:layout_marginTop="17dp"
        android:text="@string/save_device_name" />

<ScrollView
    android:id="@+id/SCROLLER_ID"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/device_label"
    android:layout_alignParentBottom="true"
    android:layout_below="@+id/save_device_name"
    android:fillViewport="true"
    android:scrollbars="vertical" >

    <TextView
        android:id="@+id/btoutput_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
         />
</ScrollView>

<EditText
    android:id="@+id/device_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/signal_button"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="62dp"
    android:ems="10" />

<TextView
    android:id="@+id/default_device_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/device_name"
    android:layout_alignLeft="@+id/device_name"
    android:layout_marginBottom="37dp"
    android:text="@string/device_name" />

</RelativeLayout>